# MakePracticeBook

./: .env.example  .gitignore  README.md  install-mpb-path.ps1  main.py  models.yaml  mpb.ps1  mpb.spec  pyproject.toml
ExBook/: ExBook.cls  README.md  config.tex  example_image_type.tex  example_text_type.tex
ExBook/contents/: pre.tex  print.tex
api_demonstrate/groq/: llama-guard-4-12b.py  llama-prompt-guard-2-22m.py
example/api_demonstrate/groq/: llama-prompt-guard-2-86m.py
examples/api_demonstrate/groq/: llama-3.1-8b-instant.py  qwen3-32b.py
examples/api_demonstrate/zhipu/: glm-4-flash.py
make_practice_book/: __main__.py  ai_processor.py  chunking.py  cli.py  doc_converter.py  exbook_writer.py  file_converter.py  gui.py  imaging.py  latex_compiler.py  ocr_processor.py  pdf_utils.py  question_splitter.py  utils.py
scripts/: 01 生成背景图.bat  02 纵向连接图片.bat  03 将文件夹内的jpg加上背景.py  04 将文件夹内的jpg两两拼接.py  05 将文件夹内的jpg设置dpi为300.py  06 将文件夹内的jpg合并为pdf.bat  add_background.bat  auto_process.bat  build_exe.bat  convert_document.bat  generate_background.bat  jpgs_to_pdf.bat  mpb.bat  ocr_segment.bat  pairwise_concat.bat  set_dpi.bat
