[project]
name = "makepracticebook"
version = "0.0.1"
description = "考研 做题本 生成"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "rich",
    "pymupdf",
    "pytesseract",
    "opencv-python",
    "numpy",
    "pillow",
    "python-docx",
    "requests",
    "pyyaml",
    "python-dotenv",
    "pyinstaller>=6.16.0",
    "groq",
    "zhipuai",
    "PyQt5",
    "PyQt5-Qt5==5.15.2; platform_system == \"Windows\"",
]

[project.scripts]
mpb = "make_practice_book.cli:app"
mpb-gui = "make_practice_book.gui:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["make_practice_book", "make_practice_book.*"]
