[project]
name = "makepracticebook"
version = "0.1.0"
description = "考研 做题本 生成"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "typer",
    "rich",
    "chardet<6",
    "pymupdf",
    "pytesseract",
    "opencv-python",
    "numpy",
    "pillow",
    "paddleocr>=3.5.0",
    "paddlepaddle>=3.3.1",
    "python-docx",
    "requests",
    "pyyaml",
    "python-dotenv",
    "pyinstaller>=6.16.0",
]

[project.scripts]
mpb = "make_practice_book.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["make_practice_book", "make_practice_book.*"]
